--- a/gnuboard5/mobile/skin/faq/basic/style.css
+++ b/gnuboard5/mobile/skin/faq/basic/style.css
@@ -5,10 +5,11 @@
 #bo_cate ul:after {display:block;visibility:hidden;clear:both;content:""} 
 #bo_cate li{display:inline-block;float:left;margin:3px 5px 3px 0}
 #bo_cate a {display:block;line-height:24px;padding:0 10px;border-radius:13px;background:#fff;}
-#bo_cate #bo_cate_on {background:#4162ff;color:#fff;
--webkit-box-shadow:0 0 5px  rgba(65,98,255,0.8);
--moz-box-shadow:0 0 5px  rgba(65,98,255,0.8);
-box-shadow: 0 0 8px  rgba(65,98,255,0.8);}
+#bo_cate #bo_cate_on {background:#666;color:#fff;
+-webkit-box-shadow:0 0 5px  #444;
+-moz-box-shadow:0 0 5px  #444;
+box-shadow: 0 0 8px  #444;
+}
 
 #faq_wrap {margin:10px 10px 60px}
 #faq_wrap h2 {position:absolute;font-size:0;text-indent:-9999em;line-height:0;overflow:hidden}
