--- a/gnuboard5/skin/qa/basic/style.css
+++ b/gnuboard5/skin/qa/basic/style.css
@@ -169,7 +169,7 @@ box-shadow:inset 0 2px 5px rgb(33, 135, 202);}
 #char_count_wrp {margin:5px 0 0;text-align:right}
 #char_count {font-weight:bold}
 
-#autosave_wrapper {position:relative}
+#autosave_wrapper {position:relative;color:#444}
 #autosave_pop {display:none;z-index:10;position:absolute;top:24px;right:117px;padding:8px;width:350px;height:auto !important;height:180px;max-height:180px;border:1px solid #565656;background:#fff;overflow-y:scroll}
 html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !important} /* overflow 미지원 기기 대응 */
 #autosave_pop strong {position:absolute;font-size:0;line-height:0;overflow:hidden}
@@ -178,7 +178,7 @@ html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !importa
 #autosave_pop ul {margin:10px 0;padding:0;border-top:1px solid #e9e9e9;list-style:none}
 #autosave_pop li {padding:8px 5px;border-bottom:1px solid #e9e9e9;zoom:1}
 #autosave_pop li:after {display:block;visibility:hidden;clear:both;content:""}
-#autosave_pop a {display:block;float:left}
+#autosave_pop a {display:block;float:left;color:#444}
 #autosave_pop span {display:block;float:right}
 .autosave_close {cursor:pointer}
 .autosave_content {display:none}
