--- a/gnuboard5/theme/basic/skin/board/basic/style.css
+++ b/gnuboard5/theme/basic/skin/board/basic/style.css
@@ -182,8 +182,8 @@ html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !importa
 #autosave_pop ul {padding:15px;border-top:1px solid #e9e9e9;list-style:none;overflow-y:scroll;height:130px;border-bottom:1px solid #e8e8e8}
 #autosave_pop li {padding:8px 5px;border-bottom:1px solid #fff;background:#eee;zoom:1}
 #autosave_pop li:after {display:block;visibility:hidden;clear:both;content:""}
-#autosave_pop a {display:block;float:left}
-#autosave_pop span {display:block;float:right;font-size:0.92em;font-style:italic;color:#999}
+#autosave_pop a {display:block;float:left;color:#444}
+#autosave_pop span {display:block;float:right;font-size:0.92em;font-style:italic;color:#444}
 .autosave_close {cursor:pointer;width:100%;height:30px;background:none;color:#888;font-weight:bold;font-size:0.92em}
 .autosave_close:hover{background:#f3f3f3;color:#3597d9}
 .autosave_content {display:none}
