--- a/gnuboard5/theme/basic/skin/qa/basic/style.css
+++ b/gnuboard5/theme/basic/skin/qa/basic/style.css
@@ -178,7 +178,7 @@ html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !importa
 #autosave_pop ul {margin:10px 0;padding:0;border-top:1px solid #e9e9e9;list-style:none}
 #autosave_pop li {padding:8px 5px;border-bottom:1px solid #e9e9e9;zoom:1}
 #autosave_pop li:after {display:block;visibility:hidden;clear:both;content:""}
-#autosave_pop a {display:block;float:left}
+#autosave_pop a {display:block;float:left;color:#444;}
 #autosave_pop span {display:block;float:right}
 .autosave_close {cursor:pointer}
 .autosave_content {display:none}
