--- a/gnuboard5/skin/member/basic/style.css
+++ b/gnuboard5/skin/member/basic/style.css
@@ -31,7 +31,7 @@
 .mbskin a.btn_admin:focus, .mbskin a.btn_admin:hover {}
 
 /* 기본박스 */
-.mbskin{position: relative;margin:100px auto 0;border:1px solid #ddd;width:400px;background:#fff;text-align:center;
+.mbskin{position: relative;margin:100px auto 0;border:1px solid #444;width:400px;background:#fff;text-align:center;
 }
 .mbskin:before,.mbskin:after{
 content:"";
@@ -157,11 +157,11 @@ box-shadow: 0 1px 3px #eee;
 #find_info #mb_email{margin:10px 0;}
 
 /* 로그인 */
-#mb_login {}
+#mb_login {background:rgba(17, 17, 17, 0.9);color:#eee}
 #login_fs{padding:0 50px}
 #mb_login #login_fs .frm_input{margin:0 0 10px}
 #mb_login #login_fs .btn_submit {margin:0 0 20px}
-#mb_login #login_info{background:#f6f6f6;padding:25px 10px;border-top:1px solid #e8e8e8;margin:40px 0 0 }
+#mb_login #login_info{padding:25px 10px;border-top:1px solid #444;margin:40px 0 0 }
 #mb_login #login_info:after {display:block;visibility:hidden;clear:both;content:""}
 #mb_login #login_info h2 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #mb_login #login_info a{display:inline-block;width:50%;float:left}
