--- a/gnuboard5/theme/basic/skin/search/basic/style.css
+++ b/gnuboard5/theme/basic/skin/search/basic/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /* 전체검색결과 스킨 */
-#sch_res_detail {background:#fff;padding:30px;border:1px solid #ccc;text-align:center;margin:0 0 10px}
+#sch_res_detail {background:rgba(17,17,17,0.9);color:#eee; padding:30px;border:1px solid #444;text-align:center;margin:0 0 10px}
 #sch_res_detail legend {position:absolute;margin:0;padding:0;font-size:0;line-height:0;text-indent:-9999em;overflow:hidden}
 #sch_res_detail select{border:1px solid #646982;height:40px;padding:0 5px}
 #sch_res_detail .frm_input{border:1px solid #646982;border-radius:0;}
