--- a/gnuboard5/skin/qa/basic/style.css
+++ b/gnuboard5/skin/qa/basic/style.css
@@ -162,7 +162,7 @@ box-shadow:inset 0 2px 5px rgb(33, 135, 202);}
 #bo_sch:after {display:block;visibility:hidden;clear:both;content:""}
 #bo_sch legend {position:absolute;margin:0;padding:0;font-size:0;line-height:0;text-indent:-9999em;overflow:hidden}
 #bo_sch .sch_input{height:38px;border:0;padding:0;background-color:transparent;float:left}
-#bo_sch .sch_btn{height:38px;float:left;background:none;border:0;width:40px;font-size:15px}
+#bo_sch .sch_btn{height:38px;float:left;background:none;border:0;width:40px;font-size:15px;color:#eee;}
 
 /* 게시판 쓰기 */
 #char_count_desc {display:block;margin:0 0 5px;padding:0}
