--- a/gnuboard5/theme/basic/skin/board/basic/style.css
+++ b/gnuboard5/theme/basic/skin/board/basic/style.css
@@ -160,7 +160,7 @@ box-shadow: inset 0 2px 5px  rgba(255,255,255,0.3);}
 #bo_sch legend {position:absolute;margin:0;padding:0;font-size:0;line-height:0;text-indent:-9999em;overflow:hidden}
 #bo_sch select{border:0;margin:9px 5px ;height:20px;float:left;border-right:1px solid #ddd;}
 #bo_sch .sch_input{height:38px;border:0;padding:0;background-color:transparent;float:left}
-#bo_sch .sch_btn{height:38px;float:left;background:none;border:0;width:40px;font-size:15px}
+#bo_sch .sch_btn{height:38px;float:left;background:none;border:0;width:40px;font-size:15px;color:#eee;}
 
 
 /* 게시판 쓰기 */
