--- a/gnuboard5/theme/basic/css/default.css
+++ b/gnuboard5/theme/basic/css/default.css
@@ -353,9 +353,9 @@ box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 .tbl_frm01 .frm_info {display:block;padding:0 0 5px;line-height:1.4em}
 
 /*기본 리스트*/
-.list_01 li{border:1px solid #dbdbdb;background:#fff;border-radius:3px;margin:3px 0;padding:10px 15px;list-style:none;position:relative;}
+.list_01 li{color:#eee;border:1px solid #444;background:rgba(17, 17, 17, 0.9);border-radius:3px;margin:3px 0;padding:10px 15px;list-style:none;position:relative;}
 .list_01 li:after {display:block;visibility:hidden;clear:both;content:""}
-.list_01 li:hover{background:#f9f9f9}
+.list_01 li:hover{}
 .list_01 li.empty_li{text-align:center;padding:20px 0;color:#666}
 /*폼 리스트*/
 .form_01 h2{margin:0 0 10px;font-size:1.167em}
